feat:下一步也暂存

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <!--eruda.init();-->
     <!--}-->
     <!--</script>-->
+    <script
+      nomodule
+      src="https://download.1card1.cn/management/download/js/babel-polyfill.7.0.0.min.js"
+    ></script>
     <div id="app">
       <style>
         .center {
